Add universal Minecraft 1.16-26.2 support